Revert "Revert "#1572 - .fixedCount occurrences removed, fixed z-index for resize handlers + fixed textarea autoresize""
This reverts commit b3f74c8e68d59adda02046172d6947233aa7e169.

--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -183,7 +183,7 @@
   position: absolute;
   top: 0;
   cursor: col-resize;
-  z-index: 100;
+  z-index: 110;
 }
 
 .handsontable .manualColumnResizerHandle {
@@ -196,7 +196,7 @@
   position: absolute;
   left: 0;
   cursor: row-resize;
-  z-index: 100;
+  z-index: 110;
 }
 
 .handsontable .manualRowResizerHandle {
@@ -482,15 +482,15 @@ ul.context-menu-list li {
 }
 
 .ht_clone_top {
-  z-index: 101 !important;
+  z-index: 101;
 }
 
 .ht_clone_left {
-  z-index: 102 !important;;
+  z-index: 102;
 }
 
 .ht_clone_corner {
-  z-index: 103 !important;;
+  z-index: 103;
 }
 
 .htContextMenu table.htCore {
